unpackaged/main/default/objects/Knowledge_Article__c/Knowledge_Article__c.object-meta.xml
<CustomObject>
    <description>This object will be used as a temporary measure to migrate Knowledge Articles from the legacy instance while a permanent migration solution is developed.</description>
    <label>Knowledge Article</label>
    <nameField>
        <label>Knowledge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Knowledge Article</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>