unpackaged/main/default/objects/Knowledge_Article__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Knowledge Article</relationshipLabel>
    <relationshipName>Knowledge_Articles</relationshipName>
    <type>Lookup</type>
</CustomField>