unpackaged/main/default/objects/Knowledge_Article__c/fields/Account_Settings_Configs__c.field-meta.xml
<CustomField>
    <fullName>Account_Settings_Configs__c</fullName>
    <label>Account Settings &amp; Configs</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>