unpackaged/main/default/objects/Knowledge_Article__c/fields/Additional_Resources__c.field-meta.xml
<CustomField>
    <fullName>Additional_Resources__c</fullName>
    <label>Additional Resources</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>