unpackaged/main/default/objects/Knowledge_Article__c/fields/Architecture__c.field-meta.xml
<CustomField>
    <fullName>Architecture__c</fullName>
    <label>Architecture</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>