unpackaged/main/default/objects/Knowledge_Article__c/fields/Child_Pages__c.field-meta.xml
<CustomField>
    <fullName>Child_Pages__c</fullName>
    <label>Child Pages</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>