unpackaged/main/default/objects/Knowledge_Article__c/fields/Common_Issues__c.field-meta.xml
<CustomField>
    <fullName>Common_Issues__c</fullName>
    <label>Common Issues</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>