unpackaged/main/default/objects/Knowledge_Article__c/fields/Escalation_Paths__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Paths__c</fullName>
    <label>Escalation Paths</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>