unpackaged/main/default/objects/Knowledge_Article__c/fields/Implementation__c.field-meta.xml
<CustomField>
    <fullName>Implementation__c</fullName>
    <label>Implementation</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>