unpackaged/main/default/objects/Knowledge_Article__c/fields/Known_Issues_Limitations__c.field-meta.xml
<CustomField>
    <fullName>Known_Issues_Limitations__c</fullName>
    <label>Known Issues &amp; Limitations</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>