unpackaged/main/default/objects/Knowledge_Article__c/fields/Legacy_SME_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_SME_Id__c</fullName>
    <label>Legacy SME Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>