unpackaged/main/default/objects/Knowledge_Article__c/fields/Main_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Main_Contacts__c</fullName>
    <label>Main Contacts</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>