unpackaged/main/default/objects/Knowledge_Article__c/fields/Main_Section__c.field-meta.xml
<CustomField>
    <fullName>Main_Section__c</fullName>
    <label>Main Section</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>