unpackaged/main/default/objects/Knowledge_Article__c/fields/Other_Resources__c.field-meta.xml
<CustomField>
    <fullName>Other_Resources__c</fullName>
    <label>Other Resources</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>