unpackaged/main/default/objects/Knowledge_Article__c/fields/Partners_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Partners_Contacts__c</fullName>
    <label>Partners Contacts</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>