unpackaged/main/default/objects/Knowledge_Article__c/fields/Product_Overview__c.field-meta.xml
<CustomField>
    <fullName>Product_Overview__c</fullName>
    <label>Product Overview</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>