unpackaged/main/default/objects/Knowledge_Article__c/fields/Related_Articles__c.field-meta.xml
<CustomField>
    <fullName>Related_Articles__c</fullName>
    <label>Related Articles</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>