unpackaged/main/default/objects/Knowledge_Article__c/fields/Sites_Apps__c.field-meta.xml
<CustomField>
    <fullName>Sites_Apps__c</fullName>
    <label>Sites Apps</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>