unpackaged/main/default/objects/Knowledge_Article__c/fields/SME__c.field-meta.xml
<CustomField>
    <fullName>SME__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SME</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Knowledge_Article</relationshipName>
    <type>Lookup</type>
</CustomField>