unpackaged/main/default/objects/Knowledge_Article__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <label>Summary</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>