unpackaged/main/default/objects/Knowledge_Article__c/fields/Tips_Tricks__c.field-meta.xml
<CustomField>
    <fullName>Tips_Tricks__c</fullName>
    <label>Tips &amp; Tricks</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>