unpackaged/main/default/objects/Knowledge_Article__c/fields/Training_Video__c.field-meta.xml
<CustomField>
    <fullName>Training_Video__c</fullName>
    <label>Training Video</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>