unpackaged/main/default/objects/Knowledge_Article__c/fields/Troubleshooting__c.field-meta.xml
<CustomField>
    <fullName>Troubleshooting__c</fullName>
    <label>Troubleshooting</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>