unpackaged/main/default/objects/Knowledge_Article__c/fields/Videos__c.field-meta.xml
<CustomField>
    <fullName>Videos__c</fullName>
    <label>Videos</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>