unpackaged/main/default/objects/Knowledge_Article__c/recordTypes/CS_Customer_Article.recordType-meta.xml
<RecordType>
    <fullName>CS_Customer_Article</fullName>
    <active>true</active>
    <label>CS Customer Article</label>
</RecordType>