unpackaged/main/default/objects/Knowledge_Article__c/recordTypes/Product_Playbook.recordType-meta.xml
<RecordType>
    <fullName>Product_Playbook</fullName>
    <active>true</active>
    <label>Product Playbook</label>
</RecordType>