unpackaged/main/default/objects/Knowledge_Article__c/recordTypes/SalesOps_Playbook.recordType-meta.xml
<RecordType>
    <fullName>SalesOps_Playbook</fullName>
    <active>true</active>
    <label>SalesOps Playbook</label>
</RecordType>