unpackaged/main/default/objects/Knowledge_Article__c/recordTypes/Solution.recordType-meta.xml
<RecordType>
    <fullName>Solution</fullName>
    <active>true</active>
    <label>Solution</label>
</RecordType>